--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -1,6 +1,87 @@
+light-red = #FFDDDD
+light-green = #DDFFDD
+red = #d9534f
+green = #5cb85c
+
 body
+  margin-bottom 60px
   padding 50px
   font 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
 a
   color #00B7FF
+
+html
+  position relative
+  min-height 100%
+
+.footer
+  position absolute
+  bottom 0
+  width 100%
+
+  height 60px
+  background-color #f5f5f5
+
+.container
+  width auto
+  max-width 1200px
+  padding 0 15px
+
+.container .text-muted
+  margin 20px 0
+
+.panel-if
+  height auto
+  min-height 400px
+  padding-bottom 15px
+
+.panel-then
+  height auto
+  min-height 400px
+  padding-bottom 15px
+
+.description
+  padding-bottom 10px
+
+.panel
+  height auto
+  margin 0 auto
+
+  .panel-green
+    background-color light-green
+    border-color green
+    border-style solid
+    border-width 1px
+    min-height 400px
+
+  .panel-red
+    background-color light-red
+    border-color red
+    border-style solid
+    border-width 1px
+    min-height 400px
+
+
+.panel-heading
+  border-top-left-radius 0px
+  border-top-right-radius 0px
+
+.panel-green .panel-heading
+  border-color green
+  color #ffffff
+  background-color green
+
+.panel-red .panel-heading
+  border-color red
+  background-color red
+  color #ffffff
+
+.big-panel
+  border-color #333333
+  background-color #eeeeee repeat-y
+  .buttonbar
+    padding-top 20px
+
+.titleIfThen
+  padding-top 5px
