--- a/app/partials/rulesManagment.html
+++ b/app/partials/rulesManagment.html
@@ -19,7 +19,7 @@
                     <td>{{rule.reference}}</td>
                     <td>{{rule.enabled}}</td>
                     <td><a class="btn btn-xs btn-primary" ng-href="#/ruleEditor/{{rule.id}}">Modification </a></td>
-                    <td><a class="btn btn-xs btn-primary" ng-click="delete(rule.id, $index)">Delete </a></td>
+                    <td><a class="btn btn-xs btn-primary" ng-disabled="true" ng-click="delete(rule.id, $index)">Delete </a></td>
                 </tr>
                 </tbody>
             </table>
