Prepare the views for #1 ActionTarget (management, template editor and instance editor), #2 eventSource (management, template editor and instance editor). Lot

--- a/app/partials/cockpit.html
+++ b/app/partials/cockpit.html
@@ -4,29 +4,19 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-md-4">
-                <a class="btn" ng-href="#/user" ng-disabled="true">
-                    <span class="fa-stack fa-4x">
+                <a class="btn" ng-href="#/settings">
+                    <span class="fa-stack fa-4x text-primary">
                         <i class="fa fa-square fa-stack-2x"></i>
-                        <i class="fa fa-user fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
                 </a>
 
-                <h4 class="service-heading">User</h4>
+                <h4 class="service-heading">Settings</h4>
             </div>
-            <div class="col-md-4">
-                <a class="btn" ng-href="#/organization" ng-disabled="true">
-                <span class="fa-stack fa-4x">
 
-                        <i class="fa fa-square fa-stack-2x"></i>
-                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
-
-                    </span>
-                </a>
-                <h4 class="service-heading">Organization</h4>
-            </div>
             <div class="col-md-4">
                 <a class="btn" ng-href="#/rules">
-                <span class="fa-stack fa-4x">
+                <span class="fa-stack fa-4x text-primary">
 
                         <i class="fa fa-square fa-stack-2x"></i>
                         <i class="fa fa-connectdevelop fa-stack-1x fa-inverse"></i>
@@ -34,6 +24,31 @@
                     </span>
                 </a>
                 <h4 class="service-heading">Rules</h4>
+            </div>
+            <div class="col-md-4">
+                <a class="btn" ng-href="#/eventSource">
+                <span class="fa-stack fa-4x text-primary">
+
+                        <i class="fa fa-square fa-stack-2x "></i>
+                        <i class="fa fa-bell fa-stack-1x fa-inverse"></i>
+
+                    </span>
+                </a>
+                <h4 class="service-heading">Source Event</h4>
+            </div>
+        </div>
+        <br>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <a class="btn" ng-href="#/actionTarget">
+                <span class="fa-stack fa-4x text-primary">
+
+                        <i class="fa fa-square fa-stack-2x"></i>
+                        <i class="fa fa-bullseye fa-stack-1x fa-inverse"></i>
+
+                    </span>
+                </a>
+                <h4 class="service-heading">Action Target</h4>
             </div>
         </div>
     </div>
