--- a/app/partials/eventSourceManagement.html
+++ b/app/partials/eventSourceManagement.html
@@ -13,16 +13,18 @@
                 <th><a href="" ng-click="predicate = 'organization'; reverse=!reverse">Organization</a></th>
                 <th>Modification</th>
                 <th>Create instance</th>
+                <th>View instances</th>
                 </thead>
                 <tbody ng-repeat="eventSourceTemplate in eventSourceTemplates | orderBy:predicate:reverse | filter:{name:search}">
                 <tr ng-class-odd="'rowOddClickable'" ng-class-even="'rowEvenClickable'" title="Click to toggle collapse/expand event source instances."
-                    ng-click="selectTableRow($index, eventSourceTemplate.id)" href="#">
+                    >
                     <td>{{eventSourceTemplate.name}}</td>
                     <td>{{eventSourceTemplate.key}}</td>
                     <td><input type="checkbox" ng-model="eventSourceTemplate.public" ng-disabled="true"></td>
                     <td>{{eventSourceTemplate.organizationId}}</td>
                     <td><a class="btn btn-xs btn-primary" ng-href="#/eventSourceTemplateEditor/{{eventSourceTemplate.id}}">Modifiy</a></td>
-                    <td><a class="btn btn-xs btn-primary" ng-href="#/eventSourceInstanceEditor">Add </a></td>
+                    <td><a class="btn btn-xs btn-primary" ng-click="createInstance(eventSourceTemplate.id)">Add </a></td>
+                    <td><a class="btn btn-xs btn-primary" ng-click="selectTableRow($index)">View</a></td>
                 </tr>
                 <tr ng-show="$index === showIndex">
                     <td></td>
