--- a/app/partials/actionTargetInstanceEditor.html
+++ b/app/partials/actionTargetInstanceEditor.html
@@ -23,18 +23,17 @@
                                                      ng-model="atInstance.description">
                         </div>
                     </div>
-
-
                     <div class="form-group">
-                        <label for="templateSelect" class="col-sm-4 control-label">Organization </label>
+                        <label for="organizationSelect" class="col-sm-4 control-label">Organization </label>
 
                         <div class="col-sm-8">
-                            <ui-select id="templateSelect" ng-model="atTemplate.organizationId" theme="bootstrap">
-                                <ui-select-match placeholder="Select an organization">{{$select.selected.orgName}}</ui-select-match>
-                                <ui-select-choices repeat="organization in organizations  | filter: { orgName: $select.search }" value="{{$select.selected.orgName}}">
-                                    <div ng-bind-html="organization.orgName | highlight: $select.search"></div>
+                            <ui-select id="organizationSelect" name="orgSelect0" ng-model="atInstance.organizationId" theme="bootstrap" >
+                                <ui-select-match placeholder="Select an organization">{{$select.selected.name}}</ui-select-match>
+                                <ui-select-choices repeat="organization.id as organization in organizations  | filter: { name: $select.search }" name="orgSelect2" value="{{$select.selected.name}}">
+                                    <div ng-bind-html="organization.name | highlight: $select.search"></div>
                                 </ui-select-choices>
                             </ui-select>
+                            <p class="help-block text-danger"></p>
                         </div>
                     </div>
                 </div>
@@ -45,9 +44,9 @@
                     <div class="form-group">
                         <label for="configuration" class="col-sm-4 control-label">Configuration </label>
 
-                        <div class="col-sm-8"><input id="configuration" name="configuration" type="text" class="form-control"
-                                                     placeholder="Schema URL"
-                                                     ng-model="atInstance.configuration" required>
+                        <div class="col-sm-8"><textarea json-text id="configuration" name="configuration" class="form-control"
+                                                     placeholder="Schema" rows="5"
+                                                     ng-model="atInstance.configuration" required></textarea>
                         </div>
                     </div>
                 </div>
@@ -58,8 +57,9 @@
         <div class="col-lg-12">
             <div class="buttonbar">
                 <a class="btn btn-primary" ng-click="cancel()">Cancel</a>
-                <a class="btn btn-primary" ng-click="create()">{{buttonName}}</a>
+                <a class="btn btn-primary" ng-click="submitForm()">{{buttonName}}</a>
             </div>
         </div>
+        {{atInstance}}
     </div>
 </div>
