--- a/app/partials/eventSourceTemplateEditor.html
+++ b/app/partials/eventSourceTemplateEditor.html
@@ -13,6 +13,7 @@
                         <div class="col-sm-8"><input id="NameTemplate" name="nameTemplate" type="text" class="form-control"
                                                      placeholder="Name of the template"
                                                      ng-model="esTemplate.name" required>
+                            <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="form-group">
@@ -20,11 +21,12 @@
 
                         <div class="col-sm-8">
                             <ui-select id="organizationSelect" ng-model="esTemplate.organizationId" theme="bootstrap">
-                                <ui-select-match placeholder="Select an organization">{{$select.selected.orgName}}</ui-select-match>
-                                <ui-select-choices repeat="organization in organizations  | filter: { orgName: $select.search }" value="{{$select.selected.orgName}}">
-                                    <div ng-bind-html="organization.orgName | highlight: $select.search"></div>
+                                <ui-select-match placeholder="Select an organization">{{$select.selected.name}}</ui-select-match>
+                                <ui-select-choices repeat="organization.id as organization in organizations  | filter: { orgName: $select.search }" value="{{$select.selected.name}}">
+                                    <div ng-bind-html="organization.name | highlight: $select.search"></div>
                                 </ui-select-choices>
                             </ui-select>
+                            <p class="help-block text-danger"></p>
                         </div>
                     </div>
 
@@ -43,11 +45,12 @@
                     <h3>Schema</h3>
 
                     <div class="form-group">
-                        <label for="schemaUrl" class="col-sm-4 control-label">Schema URL </label>
+                        <label for="schemaUrl" class="col-sm-4 control-label">Schema Form </label>
 
-                        <div class="col-sm-8"><input id="schemaUrl" name="schemaUrl" type="url" class="form-control"
-                                                     placeholder="Schema URL"
-                                                     ng-model="esTemplate.schema.$schema" required>
+                        <div class="col-sm-8"><textarea json-text id="schemaUrl" name="schemaForm" type="text" class="form-control"
+                                                     placeholder="JSON form"
+                                                     ng-model="esTemplate.configuration.schema" required></textarea>
+                            <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="form-group">
@@ -55,7 +58,8 @@
 
                         <div class="col-sm-8"><input id="configurationUrl" name="ConfigUrl" type="url" class="form-control"
                                                      placeholder="Configuration URL "
-                                                     ng-model="esTemplate.schema.url" required>
+                                                     ng-model="esTemplate.configuration.url" required>
+                            <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="form-group">
@@ -63,7 +67,7 @@
 
                         <div class="col-sm-8"><input id="configurationToken" name="ConfigToken" type="text" class="form-control"
                                                      placeholder="JWT Token"
-                                                     ng-model="esTemplate.schema.token">
+                                                     ng-model="esTemplate.configuration.token">
                         </div>
                     </div>
                 </div>
@@ -73,11 +77,11 @@
                     <h3>Configuration UI</h3>
 
                     <div class="form-group">
-                        <label for="schemaForm" class="col-sm-4 control-label">Schema Form</label>
+                        <label for="schemaForm" class="col-sm-4 control-label">Configuration Form</label>
 
-                        <div class="col-sm-8"><input id="schemaForm" name="schemaUrl" type="url" class="form-control"
-                                                     placeholder="Configuration Schema"
-                                                     ng-model="esTemplate.configurationUi">
+                        <div class="col-sm-8"><textarea json-text id="schemaForm" name="schemaUrl" type="text" class="form-control"
+                                                     placeholder="JSON Schema"
+                                                     ng-model="esTemplate.configurationUi"></textarea>
                         </div>
                     </div>
 
@@ -87,8 +91,8 @@
 
             <div class="col-lg-12">
                 <div class="buttonbar">
-                    <a class="btn btn-primary" ng-click="cancel()">Cancel</a>
-                    <a class="btn btn-primary" ng-click="create()">{{buttonName}}</a>
+                    <a class="btn btn-primary" type="button" ng-click="cancel()">Cancel</a>
+                    <a class="btn btn-primary" type="submit" ng-click="submitForm()">{{buttonName}}</a>
                 </div>
             </div>
             {{esTemplate}}
