--- a/app/partials/register.html
+++ b/app/partials/register.html
@@ -45,7 +45,7 @@
                         <div class="form-group">
                             <label  class="col-md-3 control-label">Password</label>
                             <div class="col-md-9">
-                                <input type="password" class="form-control" ng-model="credentials.verificationPassword" name="password" placeholder="Re-type your password">
+                                <input type="password" class="form-control" ng-model="credentials.passwordConfirmation" name="password" placeholder="Re-type your password">
                             </div>
                         </div>
 
