--- a/app/partials/settings.html
+++ b/app/partials/settings.html
@@ -1,57 +1,95 @@
 <div class="container">
     <div id="page-content-wrapper">
 
-        <h1>Cockpit</h1>
+        <h1>Settings</h1>
 
-        <section id="user" class="col-lg-12">
-            <div>
-                <h3>User information</h3>
-            </div>
-            <div class="col-lg-8">
-                <form>
-                    <div class="form-group">
-                        <label for="firstName" class="col-sm-3 control-label">First Name </label>
-                        <div class="col-sm-9"><input id="firstName" name="Description" type="text" class="form-control"
-                                                      placeholder="First name" ng-model="detailCurrentUser.firstName">
-                        </div>
-                    </div>
+        <div class="big-panel">
+            <section id="user" class="col-lg-12">
+                <div>
+                    <h3>User information</h3>
+                </div>
+                <div class="col-lg-8">
 
                     <div class="form-group">
-                        <label for="lastName" class="col-sm-3 control-label">Last Name </label>
-                        <div class="col-sm-9"><input id="lastName" name="Description" type="text" class="form-control"
-                                                      placeholder="Last name" ng-model="detailCurrentUser.lastName">
-                        </div>
+                        <label class="col-sm-3 control-label">First Name </label>
+
+                        <div>{{detailCurrentUser.firstName}}</div>
                     </div>
 
-                    <div class="buttonbar col-sm-9 col-sm-offset-3">
-                        <button class="btn btn-primary" ng-click="modifyUser()">Modify</button>
-                    </div>
-                </form>
-            </div>
-        </section>
-
-        <section id="Organization" class="col-lg-12">
-            <div>
-                <h3>Organization informations</h3>
-            </div>
-
-            <div class="col-lg-8">
-                <form>
                     <div class="form-group">
-                        <label for="orgName" class="col-sm-3 control-label">Organization name </label>
+                        <label class="col-sm-3 control-label">Last Name </label>
 
-                        <div class="col-sm-9"><input id="orgName" name="Description" type="text" class="form-control"
-                                                      placeholder="Name" ng-model="organization.name">
+                        <div>{{detailCurrentUser.lastName}}</div>
+                    </div>
+
+
+                </div>
+            </section>
+
+            <section id="Organization" class="col-lg-12">
+                <div>
+                    <h3>Organization informations</h3>
+                </div>
+
+                <div class="col-lg-8">
+                    Search an Event Source Template: <input ng-model="search">
+                    <table class="table table-condensed">
+                        <thead>
+                        <th><a href="" ng-click="predicate = 'name'; reverse=!reverse">Name</a></th>
+                        <th>View users</th>
+                        <th>Add user</th>
+                        <th>Modification</th>
+                        </thead>
+
+                        <tbody ng-repeat="organization in organizations | orderBy:predicate:reverse | filter:{name:search}">
+                        <tr ng-class-odd="'rowOddClickable'" ng-class-even="'rowEvenClickable'">
+                            <td>{{organization.name}}</td>
+                            <td><a class="btn btn-xs btn-primary" ng-click="selectTableRow($index, organization.id)">View</a></td>
+                            <td><a class="btn btn-xs btn-primary" ng-click="addUser(organization.id)">Add</a></td>
+                            <td><a class="btn btn-xs btn-primary" ng-click="addUser(organization.id)" ng-disabled="true">Modify</a></td>
+                        </tr>
+                        <tr ng-show="$index === showIndex">
+                            <td></td>
+                            <td colspan="4">
+                                <div>
+                                    <table class="table table-condensed table-intern">
+                                        <thead>
+                                        <th><a href="" ng-click="predicate = 'firstName'; reverse=!reverse">Firstname</a></th>
+                                        <th><a href="" ng-click="predicate = 'lastName'; reverse=!reverse">Lastname</a></th>
+                                        <th>Remove</th>
+                                        </thead>
+                                        <tbody>
+                                        <tr ng-repeat="user in users | orderBy:predicate:reverse">
+                                            <td>{{user.firstName}}</td>
+                                            <td>{{user.lastName}}</td>
+                                            <td><a class="btn btn-xs btn-danger" ng-disabled="true" ng-click="removeUser(user.id)">Remove</a></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <hr>
+                    <div>
+                        <h3>Add a new organization</h3>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Name </label>
+
+                            <div class="col-sm-5"><input id="organizationName" name="organizationName" ng-minlength="5" type="text" class="form-control"
+                                                         placeholder="Name" ng-model="org.name">
+                            </div>
+                            <div class="buttonbar col-sm-9 col-sm-offset-3">
+                                <a class="btn btn-primary" ng-click="createOrganization(org.name)">Add a new organization</a>
+                            </div>
                         </div>
+
                     </div>
-
-                    <div class="buttonbar col-sm-9 col-sm-offset-3">
-                        <button class="btn btn-primary">Modify</button>
-                    </div>
-                </form>
-            </div>
-        </section>
-
-
+                </div>
+            </section>
+        </div>
     </div>
 </div>
