--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 
 html(lang='en' ng-app='iFluxFrontendApp')
 	head
+		base(href=contextRoot)
+
 		meta(charset='UTF-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
 		meta(http-equiv='X-UA-Compatible' content='IE=edge')
