Add the live preview for the configuration form for the action target Template creation #1 Use ace editor (angularjs version) to edit json

--- a/app/partials/actionTargetManagement.html
+++ b/app/partials/actionTargetManagement.html
@@ -38,7 +38,7 @@
                                     <td>{{actionTargetInstance.name}}
                                     </td>
                                     <td>{{actionTargetInstance.id}}</td>
-                                    <td><a class="btn btn-xs btn-danger" ng-href="#/actionTargetInstanceEditor/{{actionTargetInstance.id}}">Modify</a></td>
+                                    <td><a class="btn btn-xs btn-danger" ng-click="modifyInstance(actionTargetInstance.id, actionTargetTemplate.id)">Modify</a></td>
                                 </tr>
                                 </tbody>
                             </table>
