--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -67,7 +67,6 @@ html
     border-color green
     border-style solid
     border-width 1px
-    min-height 400px
 
   .panel-red
     background-color light-red
@@ -77,8 +76,8 @@ html
     min-height 400px
 
 .panel-heading
-  border-top-left-radius 0px
-  border-top-right-radius 0px
+  border-top-left-radius 0
+  border-top-right-radius 0
 
 .panel-green .panel-heading
   border-color green
@@ -122,3 +121,6 @@ html
 
 .text-danger
   color #e74c3c
+
+.ace_editor
+  height 180px
