--- a/app/partials/actionTargetInstanceEditor.html
+++ b/app/partials/actionTargetInstanceEditor.html
@@ -27,9 +27,10 @@
                         <label for="organizationSelect" class="col-sm-4 control-label">Organization </label>
 
                         <div class="col-sm-8">
-                            <ui-select id="organizationSelect" name="orgSelect0" ng-model="atInstance.organizationId" theme="bootstrap" >
+                            <ui-select id="organizationSelect"  ng-model="atInstance.organizationId" theme="bootstrap">
                                 <ui-select-match placeholder="Select an organization">{{$select.selected.name}}</ui-select-match>
-                                <ui-select-choices repeat="organization.id as organization in organizations  | filter: { name: $select.search }" name="orgSelect2" value="{{$select.selected.name}}">
+                                <ui-select-choices repeat="organization.id as organization in organizations  | filter: { name: $select.search }" name="orgSelect2"
+                                                   value="{{$select.selected.name}}">
                                     <div ng-bind-html="organization.name | highlight: $select.search"></div>
                                 </ui-select-choices>
                             </ui-select>
@@ -42,24 +43,30 @@
                     <h3>Schema</h3>
 
                     <div class="form-group">
-                        <label for="configuration" class="col-sm-4 control-label">Configuration </label>
-
-                        <div class="col-sm-8"><textarea json-text id="configuration" name="configuration" class="form-control"
-                                                     placeholder="Schema" rows="5"
-                                                     ng-model="atInstance.configuration" required></textarea>
+                        <div class="col-sm-12">
+                            <label class="control-label">Complete the form below to configure the Action Target Instance </label>
+                            <hr>
                         </div>
+
+
+                        <div class="panel-body">
+                            <div class="col-sm-12">
+                                <div>
+                                    <form sf-schema="schema" sf-form="form" sf-model="atInstance.configuration"></form>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
 
         </div>
-
         <div class="col-lg-12">
             <div class="buttonbar">
                 <a class="btn btn-primary" ng-click="cancel()">Cancel</a>
                 <a class="btn btn-primary" ng-click="submitForm()">{{buttonName}}</a>
             </div>
         </div>
-        {{atInstance}}
     </div>
 </div>
