--- a/app/partials/actionTargetTemplateEditor.html
+++ b/app/partials/actionTargetTemplateEditor.html
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <h3>Preview Configuration</h3>
+                        <h3>Live preview configuration</h3>
 
                         <div class="panel">
                             <div class="panel-green col-lg-10">
