Correct some bugs on actionTarget Template and eventSource Template. Correct the register process (firstname and lastname), And add error detection.

--- a/app/views/partials/eventSourceTemplateEditor.html
+++ b/app/views/partials/eventSourceTemplateEditor.html
@@ -124,6 +124,8 @@
                     <a class="btn btn-primary" type="submit" ng-click="submitForm()">{{buttonName}}</a>
                 </div>
             </div>
+
+            {{esTemplate}}
         </div>
     </div>
 </div>
