--- a/app/views/partials/register.html
+++ b/app/views/partials/register.html
@@ -18,13 +18,13 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">First Name</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" ng-model="credentials.firstname" name="firstname" placeholder="First name">
+                                <input type="text" class="form-control" ng-model="credentials.firstName" name="firstname" placeholder="First name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Last Name</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" ng-model="credentials.lastname" name="lastname" placeholder="Last name">
+                                <input type="text" class="form-control" ng-model="credentials.lastName" name="lastname" placeholder="Last name">
                             </div>
                         </div>
                         <div class="form-group">
