Made the interface for the rules editor. Need to implements each functions!

--- a/app/views/partials/actionTargetTemplateEditor.html
+++ b/app/views/partials/actionTargetTemplateEditor.html
@@ -54,7 +54,7 @@
                                 <label class="control-label">Write a JSON Schema to create a configuration form</label>
 
                                 <div>
-                                    <div>
+                                    <div class="js-editor-medium">
                                         <div ui-ace="{require: ['ace/ext/language_tools'],
                                         advanced: {
                                             enableSnippets: true,
