--- a/app/views/partials/eventSourceTemplateEditor.html
+++ b/app/views/partials/eventSourceTemplateEditor.html
@@ -49,7 +49,7 @@
                             <label class="control-label">Write a JSON Schema to create a configuration form</label>
 
                             <div>
-                                <div>
+                                <div class="js-editor-medium">
                                     <div ui-ace="{require: ['ace/ext/language_tools'],
                                         advanced: {
                                             enableSnippets: true,
@@ -93,7 +93,7 @@
                         <div class="col-sm-10">
                             <label class=" control-label">Schema Form</label>
 
-                            <div>
+                            <div class="js-editor-medium">
                                 <div ui-ace="{require: ['ace/ext/language_tools'],
                                 advanced: {
                                 enableSnippets: true,
