--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -67,12 +67,14 @@ html
     border-color green
     border-style solid
     border-width 1px
+    padding 5px
 
   .panel-red
     background-color light-red
     border-color red
     border-style solid
     border-width 1px
+    padding 5px
 
 .panel-heading
   border-top-left-radius 0
@@ -122,4 +124,10 @@ html
   color #e74c3c
 
 .ace_editor
+  height 100%
+
+.js-editor-small
+  height 60px
+
+.js-editor-medium
   height 180px
