--- a/app/views/partials/ruleEditor.html
+++ b/app/views/partials/ruleEditor.html
@@ -2,7 +2,6 @@
     <div id="page-content-wrapper">
         <h1>iFLUX Rule Editor</h1>
 
-
         <div class="big-panel">
             <div class="col-lg-12 form-horizontal">
                 <h3>General Info</h3>
@@ -40,10 +39,8 @@
                 </div>
             </div>
 
-
             <div class="col-lg-12 form-horizontal">
                 <h3>Conditions</h3>
-
 
                 <div ng-repeat="condition in payload.conditions">
 
@@ -90,7 +87,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label class="col-sm-4">JS expression *</label>
+                                    <label class="col-sm-4">JS expression</label>
 
                                     <div class="col-sm-8">
                                         <div class="js-editor-small">
